clap_derive/tests/ui/tuple_struct.stderr
error: clap_derive only supports non-tuple structs and enums
  --> $DIR/tuple_struct.rs:11:10
   |
11 | #[derive(Clap, Debug)]
   |          ^^^^

error[E0277]: the trait bound `Opt: std::convert::From<clap::parse::matches::arg_matches::ArgMatches>` is not satisfied
  --> $DIR/tuple_struct.rs:11:10
   |
11 | #[derive(Clap, Debug)]
   |          ^^^^ the trait `std::convert::From<clap::parse::matches::arg_matches::ArgMatches>` is not implemented for `Opt`
